2003-01-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-menus.c

	Updated year of copyright in About dialog

2003-01-07  David Malcolm <david@davemalcolm.demon.co.uk>

	--- Version 0.7.10 ---

	* cong-editor-area-flow-holder-blocks.c

	Fix for bug #130724 (crash on loading examples/test-docbook.c)

	* cong-editor-node.c

	Fixed copy & paste typo in cong_editor_node_get_next

	* cong-overview-view.c, cong-tree-view.c, cong-tree-view.h

	Update root of Overview tree when URL changes, fixing bug #130728

2003-01-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-document.h, cong-file-properties.c

	Added set_url signal to CongDocument; update File->Properties dialog fields when URL changes, partially fixing bug #130728
	
	* cong-file-properties.c

	Fixed a memory leak; removed debug logging

	* cong-file-properties.c

	Track the modified state of the document; some improvement to dialog cleanup.

	* cong-file-properties.c

	Removed dead code; added debug code to track down the reopened bug #122029 (obscure bug when undoing DTD changes)

	* cong-file-properties.c

	Big rewrite to use Glade; fix for bug #122029 (respond to DTD notifications)

	* cong-editor-node-text.c

	Suppressed flood of g_return_if_fail error messages from cong_node_get_ordering occurring inside undo/redo system due to temporarily invalid selections (fixes bug #130236)

	* cong-plugin.c, cong-plugin.h, plugin-docbook.c

	Added a wrapper function to generate generic property dialog descriptions to reduce translator workload (fixes bug #124780)

	* cong-location.c

	Fixed bug #109698 by making Home and End keys take you to the start/end of text within the current structural element, rather than the start/end of current line

	* cong-location.c

	Added references to bug #109698 where appropriate
	
	* plugin-website.c

	Disabled this plugin; it's too broken to be worth fixing (see Bugzilla #113001 for some of the problems)

	--- Version 0.7.9 ---
