@@ -1,5 +1,9 @@
 2003-01-08  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-file-properties.c, cong-util.c, cong-util.h
+
+	Moved cong_util_load_glade_file into correct file; fixed comments
+	
 	* cong-menus.c
 
 	Updated year of copyright in About dialog
